fix: scrollbar relative dimensions

--- a/src/styles/_scrollbar.css
+++ b/src/styles/_scrollbar.css
@@ -1,15 +1,15 @@
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
+  width: 0.8rem;
+  height: 0.8rem;
 }
 
 ::-webkit-scrollbar-track {
-  border-radius: 4px;
+  border-radius: 0.4rem;
   background: #f6f6f6;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 4px;
+  border-radius: 0.4rem;
   background: #9b9b9b;
   transition: all 0.1s cubic-bezier(0.77, 0, 0.175, 1);
 }
